test/conformance/chainsaw/image-validating-policies/context/api-call/http-post/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apicall-http-post
spec:
  steps:
  - name: create server pod and service
  - try:
    - apply:
        file: http-pod.yaml
    - apply:
        file: service.yaml
    - sleep:
        duration: 8s
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-image-validating-policy-ready
    use:
      template: ../../../../_step-templates/image-validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: ivpol-apicall-correct
  - try:
    - apply: 
       file: good-pod.yaml
    - create:
        file: bad-pod.yaml
        expect:
          - check:
              ($error): >-
                admission webhook "vpol.validate.kyverno.svc-fail" denied the request: Policy vpol-http-post failed: External POST call did not return the expected response prod
